--- a/client/src/Components/DoctorsWorkbench/doctor_workbench.css
+++ b/client/src/Components/DoctorsWorkbench/doctor_workbench.css
@@ -40,6 +40,15 @@
       padding: 3px 6px !important; }
       .doctor_workbench .my-calendar .myDay_date button svg {
         height: 16px; }
+    .doctor_workbench .my-calendar .myDay_date .todayBtn {
+      margin-left: 10px;
+      padding: 3px 10px;
+      border: 1px solid white;
+      background: none;
+      color: #fff; }
+    .doctor_workbench .my-calendar .myDay_date .todayBtn:hover {
+      background: #fff;
+      color: #34b8bc; }
   .doctor_workbench .my-calendar .arrow-box {
     width: 60px;
     cursor: pointer; }
