--- a/client/src/Components/MRD/PatientMRD/patient_mrd.scss
+++ b/client/src/Components/MRD/PatientMRD/patient_mrd.scss
@@ -176,6 +176,13 @@
             border-radius: 5px;
             color: #fff;
             display: none;
+            b.top-nav-sec-hdg {
+              text-align: center;
+              border-bottom: 1px solid #337e74;
+              margin-left: -10px;
+              margin-right: -10px;
+              padding-bottom: 11px;
+            }
             b {
               display: block;
               border-bottom: 1px solid #3f9c90;
@@ -195,6 +202,12 @@
               border-radius: 20px;
               background: #3f9c91;
               font-size: 0.7rem;
+            }
+            section {
+              background: rgba(0, 0, 0, 0.05);
+              border-top: 1px solid #65dace;
+              margin: -10px;
+              padding: 10px;
             }
           }
         }
