--- a/client/src/Components/PatientProfile/patientprofile.css
+++ b/client/src/Components/PatientProfile/patientprofile.css
@@ -143,6 +143,12 @@
         border-radius: 5px;
         color: #fff;
         display: none; }
+        .patientProfile .patientTopNav .patient-quick-info li p b.top-nav-sec-hdg {
+          text-align: center;
+          border-bottom: 1px solid #337e74;
+          margin-left: -10px;
+          margin-right: -10px;
+          padding-bottom: 11px; }
         .patientProfile .patientTopNav .patient-quick-info li p b {
           display: block;
           border-bottom: 1px solid #3f9c90;
@@ -161,6 +167,11 @@
           border-radius: 20px;
           background: #3f9c91;
           font-size: 0.7rem; }
+        .patientProfile .patientTopNav .patient-quick-info li p section {
+          background: rgba(0, 0, 0, 0.05);
+          border-top: 1px solid #65dace;
+          margin: -10px;
+          padding: 10px; }
     .patientProfile .patientTopNav .patient-quick-info li:hover {
       background: #53bcb1;
       color: #fff;
