--- a/client/src/styles/algaehCssVariables.scss
+++ b/client/src/styles/algaehCssVariables.scss
@@ -1,5 +1,5 @@
 $fontSize: 0.75rem;
-$fontFamily: "Open Sans", sans-serif; //Roboto
+$fontFamily: "Titillium Web", sans-serif;
 $fontWeight: normal;
 $color: #7c909b;
 $moz-osx-font-smoothing: grayscale;
