--- a/client/src/Components/BusinessSetup/business_setup.scss
+++ b/client/src/Components/BusinessSetup/business_setup.scss
@@ -3,16 +3,20 @@
   .business-section {
     background: #fff;
     border: 1px solid #d3d3d3;
-    margin: 10px;
-    margin-top: 0px;
     border-bottom-left-radius: 5px;
     background: #ffff;
     border-bottom-right-radius: 5px;
     border-top-right-radius: 5px;
+    padding-top: 10px;
+
+    #departGrid_Cntr {
+      .ReactTable {
+        max-width: 98vw !important;
+        max-height: 53vh !important;
+      }
+    }
   }
   .toggle-section {
-    margin: 10px;
-    margin-bottom: 0px;
     //background-color: #f2f2f2;
   }
 }
