--- a/client/src/Components/RegistrationPatientAr/Billing/BillingDetails/AddBillingForm.scss
+++ b/client/src/Components/RegistrationPatientAr/Billing/BillingDetails/AddBillingForm.scss
@@ -5,11 +5,9 @@
 
 .hptl-phase1-add-billing-form {
   .primary-details {
-    padding: 10px;
-
     .primary-box-container {
-      padding-top: 6px;
-      padding-left: 10px;
+      padding-top: 0;
+      padding-left: 0;
     }
 
     .last-box-container {
@@ -28,7 +26,7 @@
     border: 1px solid #5f5f5f;
     min-height: 43vh;
     border: 1px solid rgb(172, 170, 170);
-    padding: 15px;
+    padding: 0.8rem;
     border-radius: 10px;
   }
 
@@ -75,9 +73,8 @@
   }
 
   .secondary-details {
-    padding: 10px;
     .secondary-box-container {
-      padding: 8px;
+      padding: 0.2rem 0;
     }
   }
 }
