--- a/client/src/Components/Wrapper/wrapper.scss
+++ b/client/src/Components/Wrapper/wrapper.scss
@@ -1,35 +1,49 @@
-.selected-grid-row.-odd .rt-td,
-.selected-grid-row.-even .rt-td {
-  background-color: #d9fdff !important;
-}
-
 .ReactTable {
-  max-width: 95vw !important;
-  font-size: 0.8rem;
-  background: #ffff !important;
-  .rt-th {
-    white-space: unset !important;
-    text-transform: uppercase !important;
-    background: #8c8c8c !important;
-    color: #fff !important;
-    label {
-      font-weight: 600;
+  .rt-thead {
+    .rt-th {
+      font-size: 0.8rem !important;
+      color: #fff !important;
+      background: #8c8c8c !important;
+      .style_Label {
+        font-weight: bold !important;
+        white-space: pre-line !important;
+        padding: 3px 0 !important;
+      }
     }
   }
   .-filters {
     .rt-th {
-      white-space: unset !important;
-      text-transform: uppercase !important;
-      background: #8c8c8c !important;
-      color: #fff !important;
+      background: #ccc !important;
     }
   }
-
-  .rt-td {
-    overflow: inherit !important;
-    white-space: normal !important;
+  .rt-thead.-filters input,
+  .rt-thead.-filters select {
+    padding: 0 2px !important;
+    border: 1px solid #8c8c8c !important;
   }
-
+  .rt-tbody {
+    .rt-td {
+      font-size: 0.8rem !important;
+    }
+  }
+  .-btn {
+    background: #34b8bc !important;
+    color: #fff !important;
+  }
+  .-btn:disabled {
+    background: rgba(0, 0, 0, 0.1) !important;
+  }
+  .-pagination {
+    font-size: 0.8rem !important;
+  }
+  .-pagination input,
+  .-pagination select {
+    border: 1px solid #8c8c8c !important;
+    width: 7vh !important;
+  }
+  .-pagination input {
+    padding: 2px !important;
+  }
   i.fa-pen,
   i.fa-trash-alt,
   i.fa-save,
