UI Fix for Hospital Service Setup + Grid Dropdown UI fix for Grid + autocomplete height reduce + investigation setup and insurance UI tweak

--- a/client/src/Components/HospitalServiceSetup/HospitalServiceSetup.scss
+++ b/client/src/Components/HospitalServiceSetup/HospitalServiceSetup.scss
@@ -22,4 +22,9 @@
   td {
     border-right: 1px solid #e6e6e6;
   }
+  #hospitalservices_grid_cntr {
+    .ReactTable {
+      max-height: 56vh !important;
+    }
+  }
 }
