--- a/client/src/Components/HospitalServiceSetup/HospitalServiceSetup.css
+++ b/client/src/Components/HospitalServiceSetup/HospitalServiceSetup.css
@@ -14,3 +14,5 @@
   .hims_hospitalservices th,
   .hims_hospitalservices td {
     border-right: 1px solid #e6e6e6; }
+  .hims_hospitalservices #hospitalservices_grid_cntr .ReactTable {
+    max-height: 56vh !important; }
