--- a/client/src/Components/MedicalWorkbenchSetup/medical_wb_setup.scss
+++ b/client/src/Components/MedicalWorkbenchSetup/medical_wb_setup.scss
@@ -1,3 +1,12 @@
 .medical_wb_setup {
   padding: 10px;
+
+  .wb-setup-section {
+    padding-top: 10px;
+    border: 1px solid #d3d3d3;
+    border-bottom-left-radius: 5px;
+    background: #ffff;
+    border-bottom-right-radius: 5px;
+    border-top-right-radius: 5px;
+  }
 }
