--- a/client/src/Components/Pharmacy/PointOfSale/PosListItems/PosListItems.scss
+++ b/client/src/Components/Pharmacy/PointOfSale/PosListItems/PosListItems.scss
@@ -62,6 +62,25 @@
 }
 #PointSaleGrid {
   .ReactTable {
-    max-height: 20vh !important;
+    max-height: 40vh !important;
   }
+}
+
+.algaehPaperDefault {
+  margin: 15px 0px;
+  border: 1px solid #ccc;
+  padding: 15px;
+  border-radius: 10px;
+  background: #fff;
+}
+.algaehPaperDefault:last-child {
+  margin-bottom: 0px;
+}
+
+.algaehPaperPrimary {
+  margin: 15px 0px;
+  background: #e9feff;
+  border: 1px solid #44b8bd;
+  border-radius: 10px;
+  padding: 15px;
 }
