--- a/client/src/Components/Pharmacy/PointOfSale/PosListItems/ReciptDetails/AddReciptForm.scss
+++ b/client/src/Components/Pharmacy/PointOfSale/PosListItems/ReciptDetails/AddReciptForm.scss
@@ -2,6 +2,7 @@
   background: #e9feff;
   border: 1px solid #44b8bd;
   border-radius: 5px;
+  padding: 10px 0;
   label {
     font-weight: 400;
     font-size: 11px;
