--- a/client/src/Components/Pharmacy/SalesReturn/ItemListsReturn/ItemListsReturn.scss
+++ b/client/src/Components/Pharmacy/SalesReturn/ItemListsReturn/ItemListsReturn.scss
@@ -55,3 +55,18 @@
     }
   }
 }
+.algaehPaperDefault {
+  margin: 15px 0px;
+  border: 1px solid #ccc;
+  padding: 15px;
+  border-radius: 10px;
+  background: #fff;
+}
+
+.algaehPaperPrimary {
+  margin: 15px 0px;
+  background: #e9feff;
+  border: 1px solid #44b8bd;
+  border-radius: 10px;
+  padding: 15px;
+}
