--- a/client/src/Components/Wrapper/wrapper.scss
+++ b/client/src/Components/Wrapper/wrapper.scss
@@ -1,5 +1,4 @@
 .ReactTable {
-  max-width: 95vw !important;
   .rt-thead {
     .rt-th {
       font-size: 0.8rem !important;
@@ -90,5 +89,11 @@
   .fa-plus:hover {
     background: #44b8bd;
     color: #fff;
+  }
+}
+
+@media screen and (min-width: 481px) and (max-width: 1024px) and (orientation: landscape) {
+  .ReactTable {
+    max-width: 93.1vw !important;
   }
 }
