--- a/client/src/Components/Wrapper/wrapper.scss
+++ b/client/src/Components/Wrapper/wrapper.scss
@@ -57,6 +57,7 @@
   .fa-file-export,
   .fa-sync-alt,
   .fa-file-prescription,
+  .fa-prescription,
   .fa-arrow-right,
   .fa-plus {
     cursor: pointer;
@@ -85,6 +86,7 @@
   .fa-file-export:hover,
   .fa-sync-alt:hover,
   .fa-file-prescription:hover,
+  .fa-prescription:hover,
   .fa-arrow-right:hover,
   .fa-plus:hover {
     background: #44b8bd;
