--- a/client/src/Components/RegistrationPatient/ConsultationDetails/ConsultationForm/ConsultationForm.css
+++ b/client/src/Components/RegistrationPatient/ConsultationDetails/ConsultationForm/ConsultationForm.css
@@ -6,7 +6,8 @@
 
 .hptl-phase1-add-consultation-form .primary-details {
   border-right: 1px dashed #d3d3d3;
-  padding-top: 8px; }
+  padding-top: 8px;
+  padding-bottom: 8px; }
   .hptl-phase1-add-consultation-form .primary-details .primary-box-container .radio-design {
     position: absolute;
     margin-left: 5px; }
