--- a/client/src/Components/RegistrationPatient/ConsultationDetails/ConsultationForm/ConsultationForm.scss
+++ b/client/src/Components/RegistrationPatient/ConsultationDetails/ConsultationForm/ConsultationForm.scss
@@ -11,6 +11,7 @@
   .primary-details {
     border-right: 1px dashed #d3d3d3;
     padding-top: 8px;
+    padding-bottom: 8px;
 
     .primary-box-container {
       .radio-design {
