--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -6,6 +6,24 @@ $forntSize: 0.7rem;
     height: 8px;
   }
 
+  ul.ul-legend {
+    li {
+      float: left;
+      margin-right: 10px;
+      list-style: none;
+      margin-top: 5px;
+      font-size: 0.7rem;
+      span {
+        border: 1px solid #ccc;
+        float: left;
+        width: 12px;
+        height: 12px;
+        margin: 2px;
+        margin-right: 5px;
+      }
+    }
+  }
+
   .btn-green {
     background: rgb(138, 221, 82);
     color: #fff;
@@ -44,6 +62,33 @@ $forntSize: 0.7rem;
 
   .greenCell {
     background-color: #acffc0 !important;
+  }
+
+  .cancelledClass {
+    background-color: #ff4000 !important;
+    color: white;
+    font-weight: bolder;
+  }
+
+  .confirmedClass {
+    background-color: #ff00ff !important;
+    color: white;
+    font-weight: bolder;
+  }
+  .orderedClass {
+    background-color: #ffff00 !important;
+    color: white;
+    font-weight: bolder;
+  }
+  .collectedClass {
+    background-color: #00ffff !important;
+    color: white;
+    font-weight: bolder;
+  }
+  .validateClass {
+    background-color: #4caf50 !important;
+    color: white;
+    font-weight: bolder;
   }
 
   .cursor-pointer {
