--- a/client/src/Components/Wrapper/wrapper.scss
+++ b/client/src/Components/Wrapper/wrapper.scss
@@ -22,6 +22,7 @@
     border: 1px solid #8c8c8c !important;
   }
   .rt-tbody {
+    text-align: center;
     .rt-td {
       font-size: 0.8rem !important;
       overflow: inherit !important;
