--- a/client/src/Components/Wrapper/wrapper.css
+++ b/client/src/Components/Wrapper/wrapper.css
@@ -15,9 +15,11 @@
   padding: 0 2px !important;
   border: 1px solid #8c8c8c !important; }
 
-.ReactTable .rt-tbody .rt-td {
-  font-size: 0.8rem !important;
-  overflow: inherit !important; }
+.ReactTable .rt-tbody {
+  text-align: center; }
+  .ReactTable .rt-tbody .rt-td {
+    font-size: 0.8rem !important;
+    overflow: inherit !important; }
 
 .ReactTable .-btn {
   background: #34b8bc !important;
