--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -71,7 +71,7 @@ $forntSize: 0.7rem;
   }
 
   .confirmedClass {
-    background-color: #ff00ff !important;
+    background-color: #ff99ff !important;
     color: white;
     font-weight: bolder;
   }
@@ -81,12 +81,27 @@ $forntSize: 0.7rem;
     font-weight: bolder;
   }
   .collectedClass {
-    background-color: #00ffff !important;
+    background-color: #00e6e6 !important;
     color: white;
     font-weight: bolder;
   }
   .validateClass {
-    background-color: #4caf50 !important;
+    background-color: #66ffc2 !important;
+    color: white;
+    font-weight: bolder;
+  }
+  .scheduledClass {
+    background-color: #fca6c1 !important;
+    color: white;
+    font-weight: bolder;
+  }
+  .availableClass {
+    background-color: #00ffff !important;
+    color: white;
+    font-weight: bolder;
+  }
+  .underProcessClass {
+    background-color: #cea6fc !important;
     color: white;
     font-weight: bolder;
   }
