UI fix in medical workbench

--- a/client/src/Components/PatientProfile/Assessment/OrderingServices/OrderingServices.scss
+++ b/client/src/Components/PatientProfile/Assessment/OrderingServices/OrderingServices.scss
@@ -24,7 +24,8 @@
   }
   #doctorOrder {
     .ReactTable {
-      height: 10vh !important;
+      height: 30vh !important;
+      padding-top: 10px;
     }
   }
 }
