--- a/client/src/Components/PatientProfile/Assessment/OrderingServices/OrderingServices.css
+++ b/client/src/Components/PatientProfile/Assessment/OrderingServices/OrderingServices.css
@@ -17,4 +17,5 @@
     margin-bottom: -15px;
     margin-top: -10px; }
   .hptl-phase1-ordering-services-form #doctorOrder .ReactTable {
-    height: 10vh !important; }
+    height: 30vh !important;
+    padding-top: 10px; }
