--- a/client/src/Components/PatientProfile/PatientHistory/PatientHistory.css
+++ b/client/src/Components/PatientProfile/PatientHistory/PatientHistory.css
@@ -8,14 +8,15 @@
   text-align: left;
   outline: none;
   font-size: 15px;
-  transition: 0.4s; }
+  transition: 0.4s;
+  border-bottom: #e9e9e9; }
 
-#subjectAccordian .accordion-btn:first-child {
-  border-radius: 10px 10px 0 0; }
+#subjectAccordian textarea {
+  border-radius: 0 !important; }
 
 #subjectAccordian .active,
 #subjectAccordian .accordion-btn:hover {
-  background-color: #ccc; }
+  background-color: #f1f1f1; }
 
 #subjectAccordian .accordion-btn:after {
   content: "\002B";
