--- a/client/src/Components/PatientProfile/PatientHistory/PatientHistory.scss
+++ b/client/src/Components/PatientProfile/PatientHistory/PatientHistory.scss
@@ -10,14 +10,14 @@
     outline: none;
     font-size: 15px;
     transition: 0.4s;
+    border-bottom: #e9e9e9;
   }
-  .accordion-btn:first-child {
-    border-radius: 10px 10px 0 0;
+  textarea {
+    border-radius: 0 !important;
   }
-
   .active,
   .accordion-btn:hover {
-    background-color: #ccc;
+    background-color: rgb(241, 241, 241);
   }
 
   .accordion-btn:after {
