Ordering service grid height increase

--- a/client/src/Components/PatientProfile/Assessment/OrderingServices/OrderingServices.css
+++ b/client/src/Components/PatientProfile/Assessment/OrderingServices/OrderingServices.css
@@ -17,5 +17,4 @@
     margin-bottom: -15px;
     margin-top: -10px; }
   .hptl-phase1-ordering-services-form #doctorOrder .ReactTable {
-    height: 30vh !important;
-    padding-top: 10px; }
+    height: 30vh !important; }
