--- a/client/src/Components/StaffCashCollection/StaffCashCollection.scss
+++ b/client/src/Components/StaffCashCollection/StaffCashCollection.scss
@@ -1,7 +1,8 @@
 .staffCashCollection {
   #staffCashCollectionGrid_Cntr {
+    width: 98vw !important;
     .ReactTable {
-      max-height: 20vh !important;
+      max-height: 30vh !important;
     }
   }
 }
