--- a/client/src/index.css
+++ b/client/src/index.css
@@ -62,7 +62,7 @@
     color: white;
     font-weight: bolder; }
   :global .validateClass {
-    background-color: #66ffc2 !important;
+    background-color: #2ccdd6 !important;
     color: white;
     font-weight: bolder; }
   :global .scheduledClass {
