--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -86,7 +86,7 @@ $forntSize: 0.7rem;
     font-weight: bolder;
   }
   .validateClass {
-    background-color: #66ffc2 !important;
+    background-color: #2ccdd6 !important;
     color: white;
     font-weight: bolder;
   }
