--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -96,7 +96,7 @@ $forntSize: 0.7rem;
     font-weight: bolder;
   }
   .availableClass {
-    background-color: #00ffff !important;
+    background-color: #56ce74 !important;
     color: white;
     font-weight: bolder;
   }
