--- a/client/src/index.css
+++ b/client/src/index.css
@@ -70,7 +70,7 @@
     color: white;
     font-weight: bolder; }
   :global .availableClass {
-    background-color: #00ffff !important;
+    background-color: #56ce74 !important;
     color: white;
     font-weight: bolder; }
   :global .underProcessClass {
