--- a/client/src/Components/InsuranceSetup/NetworkPlan/NetworkPlan.css
+++ b/client/src/Components/InsuranceSetup/NetworkPlan/NetworkPlan.css
@@ -23,4 +23,5 @@
     border: 1px solid #ccc;
     border-radius: 5px;
     padding-top: 10px;
-    padding-bottom: 10px; }
+    padding-bottom: 10px;
+    margin-top: 10px; }
