--- a/client/src/Components/Wrapper/wrapper.css
+++ b/client/src/Components/Wrapper/wrapper.css
@@ -19,7 +19,8 @@
   text-align: center; }
   .ReactTable .rt-tbody .rt-td {
     font-size: 0.8rem !important;
-    overflow: inherit !important; }
+    overflow: inherit !important;
+    white-space: inherit !important; }
 
 .ReactTable .-btn {
   background: #34b8bc !important;
@@ -87,4 +88,4 @@
 
 @media screen and (min-width: 481px) and (max-width: 1024px) and (orientation: landscape) {
   .ReactTable {
-    max-width: 93vw !important; } }
+    max-width: 95vw !important; } }
