Removed Breadcrump from Settings (Masters Screen)

--- a/client/src/Components/CommonSetup/common_setup.css
+++ b/client/src/Components/CommonSetup/common_setup.css
@@ -4,3 +4,6 @@
   border-bottom-right-radius: 5px;
   border-top-right-radius: 5px;
   background: #fff; }
+
+.common_setup .ReactTable {
+  max-height: 80vh !important; }
