--- a/client/src/Components/InventorySetup/InventorySetup.css
+++ b/client/src/Components/InventorySetup/InventorySetup.css
@@ -1,12 +1,9 @@
 .hims_Inventory_setup .common-section {
   border: 1px solid #d3d3d3;
-  margin: 10px;
-  margin-top: 0px;
   border-bottom-left-radius: 5px;
   border-bottom-right-radius: 5px;
   border-top-right-radius: 5px;
   background-color: #ffffff; }
 
-.hims_Inventory_setup .toggle-section {
-  margin: 10px;
-  margin-bottom: 0px; }
+.hims_Inventory_setup .ReactTable {
+  max-height: 80vh !important; }
