--- a/client/src/Components/InvestigationSetup/InvestigationSetup.scss
+++ b/client/src/Components/InvestigationSetup/InvestigationSetup.scss
@@ -1,6 +1,4 @@
 .hims_investigationsetup {
-  padding-top: 20px;
-
   .toggle-section {
     margin: 10px;
     margin-bottom: 0px;
@@ -26,5 +24,10 @@
 #invest_grid_cntr {
   .ReactTable {
     height: 43vh !important;
+  }
+}
+#investigationGridCntr {
+  .ReactTable {
+    max-height: 80vh !important;
   }
 }
