--- a/client/src/Components/LabSetup/LabSetup.css
+++ b/client/src/Components/LabSetup/LabSetup.css
@@ -5,3 +5,6 @@
   border-bottom-right-radius: 5px;
   border-top-right-radius: 5px;
   background: #fff; }
+
+.hims_lab_setup .ReactTable {
+  max-height: 80vh !important; }
