Mongoose Setup Partial and Doc Mgmt Module Setup

--- a/client/src/styles/site.css
+++ b/client/src/styles/site.css
@@ -1054,3 +1054,11 @@ th {
 
 .hijri-calender {
   z-index: 9; }
+
+.algaehModalWrapper {
+  position: fixed;
+  top: 0;
+  z-index: 999999;
+  width: 100%;
+  background: rgba(0, 0, 0, 0.4);
+  height: 100%; }
