--- a/client/src/index.css
+++ b/client/src/index.css
@@ -959,3 +959,36 @@
     max-height: 70vh;
     overflow: auto;
     padding: 15px; }
+  .divInner .tab-container .tab-button {
+    font-weight: normal;
+    border-radius: 0px;
+    background-color: #f3f3f3;
+    color: #7c909b;
+    cursor: pointer;
+    border-top-right-radius: 5px;
+    border-top-left-radius: 5px;
+    border-bottom: none; }
+    .divInner .tab-container .tab-button:hover {
+      background-color: #fff !important;
+      color: #68509f !important; }
+    .divInner .tab-container .tab-button:focus {
+      outline: none; }
+    .divInner .tab-container .tab-button.active {
+      background-color: #dbad64;
+      color: #fff;
+      pointer-events: none; }
+      .divInner .tab-container .tab-button.active.active {
+        background-color: #dbad64;
+        color: #fff;
+        pointer-events: none; }
+        .divInner .tab-container .tab-button.active.active:hover {
+          background-color: #dbad64 !important;
+          color: #fff !important; }
+    .divInner .tab-container .tab-button .tab {
+      margin-right: -30px; }
+    .divInner .tab-container .tab-button .image-drop-area {
+      border: 1px solid #93a4ad;
+      min-height: 137px;
+      position: relative; }
+    .divInner .tab-container .tab-button label {
+      cursor: pointer; }
