--- a/client/src/styles/site.css
+++ b/client/src/styles/site.css
@@ -83,40 +83,6 @@ body {
   margin-bottom: 5px;
   color: #369c92; }
 
-:global .tab-container .tab-button {
-  font-weight: normal;
-  border-radius: 0px;
-  background-color: #f3f3f3;
-  color: #7c909b;
-  cursor: pointer;
-  border-top-right-radius: 5px;
-  border-top-left-radius: 5px;
-  border-bottom: none; }
-  :global .tab-container .tab-button:hover {
-    background-color: #fff !important;
-    color: #68509f !important; }
-  :global .tab-container .tab-button:focus {
-    outline: none; }
-  :global .tab-container .tab-button.active {
-    background-color: #dbad64;
-    color: #fff;
-    pointer-events: none; }
-    :global .tab-container .tab-button.active.active {
-      background-color: #dbad64;
-      color: #fff;
-      pointer-events: none; }
-      :global .tab-container .tab-button.active.active:hover {
-        background-color: #dbad64 !important;
-        color: #fff !important; }
-  :global .tab-container .tab-button .tab {
-    margin-right: -30px; }
-  :global .tab-container .tab-button .image-drop-area {
-    border: 1px solid #93a4ad;
-    min-height: 137px;
-    position: relative; }
-  :global .tab-container .tab-button label {
-    cursor: pointer; }
-
 :global .image-drop-area {
   border: 1px solid #93a4ad;
   min-height: 101px;
@@ -1069,3 +1035,30 @@ th {
   width: 100%;
   background: rgba(0, 0, 0, 0.4);
   height: 100%; }
+
+.tab-container .tab-button {
+  padding: 2px 10px;
+  font-weight: normal;
+  background-color: #f3f3f3;
+  border: 1px solid #d3d3d3;
+  border-top-right-radius: 5px;
+  border-top-left-radius: 5px;
+  border-bottom: none; }
+  .tab-container .tab-button.active {
+    background-color: #dbad64;
+    color: #fff;
+    pointer-events: none;
+    border-color: #dbad64; }
+  .tab-container .tab-button:hover {
+    background-color: #fffcf8;
+    color: #9e670f;
+    border-color: #dbad64;
+    cursor: pointer; }
+  .tab-container .tab-button:focus {
+    outline: none; }
+  .tab-container .tab-button .image-drop-area {
+    border: 1px solid #93a4ad;
+    min-height: 137px;
+    position: relative; }
+  .tab-container .tab-button label {
+    cursor: pointer; }
