--- a/client/src/styles/site.scss
+++ b/client/src/styles/site.scss
@@ -105,61 +105,6 @@ body {
     margin-bottom: 5px;
     color: #369c92;
   }
-  .tab-container {
-    .tab-button {
-      // font-size: 12px;
-      font-weight: normal;
-      border-radius: 0px;
-      background-color: #f3f3f3;
-      color: #7c909b;
-      cursor: pointer;
-      border-top-right-radius: 5px;
-      border-top-left-radius: 5px;
-      border-bottom: none;
-      &:hover {
-        background-color: #fff !important;
-        color: #68509f !important;
-      }
-      &:focus {
-        outline: none;
-      }
-
-      &.active {
-        background-color: #dbad64;
-        color: #fff;
-        pointer-events: none;
-
-        &.active {
-          background-color: #dbad64;
-          color: #fff;
-          pointer-events: none;
-
-          &:hover {
-            background-color: #dbad64 !important;
-            color: #fff !important;
-          }
-        }
-      }
-
-      .tab {
-        margin-right: -30px;
-        &:last-child {
-          .tab-button {
-            //border-radius: 0px;
-            //border-top-right-radius: 4px;
-          }
-        }
-      }
-      .image-drop-area {
-        border: 1px solid #93a4ad;
-        min-height: 137px;
-        position: relative;
-      }
-      label {
-        cursor: pointer;
-      }
-    }
-  }
   .image-drop-area {
     border: 1px solid #93a4ad;
     min-height: 101px;
@@ -1391,4 +1336,42 @@ th {
   width: 100%;
   background: rgba(0, 0, 0, 0.4);
   height: 100%;
+}
+
+.tab-container {
+  .tab-button {
+    padding: 2px 10px;
+    font-weight: normal;
+    background-color: #f3f3f3;
+    border: 1px solid #d3d3d3;
+    border-top-right-radius: 5px;
+    border-top-left-radius: 5px;
+    border-bottom: none;
+
+    &.active {
+      background-color: #dbad64;
+      color: #fff;
+      pointer-events: none;
+      border-color: #dbad64;
+    }
+
+    &:hover {
+      background-color: #fffcf8;
+      color: #9e670f;
+      border-color: #dbad64;
+      cursor: pointer;
+    }
+    &:focus {
+      outline: none;
+    }
+
+    .image-drop-area {
+      border: 1px solid #93a4ad;
+      min-height: 137px;
+      position: relative;
+    }
+    label {
+      cursor: pointer;
+    }
+  }
 }
