Converted Tab to Navbar for all the masters under settings module + bug solved arabic filed issue in sub insurance setup

--- a/client/src/Components/AppointmentSetup/appointment_setup.scss
+++ b/client/src/Components/AppointmentSetup/appointment_setup.scss
@@ -1,11 +1,9 @@
 .appointment_setup {
   .appointment-section {
     padding-top: 10px;
+    border-radius: 5px;
     border: 1px solid #d3d3d3;
-    border-bottom-left-radius: 5px;
     background: #ffff;
-    border-bottom-right-radius: 5px;
-    border-top-right-radius: 5px;
   }
   #apptStatusDivCntr {
     .ReactTable {
