--- a/client/src/Components/BusinessSetup/business_setup.css
+++ b/client/src/Components/BusinessSetup/business_setup.css
@@ -1,10 +1,8 @@
 .business_setup .business-section {
   background: #fff;
+  border-radius: 5px;
   border: 1px solid #d3d3d3;
-  border-bottom-left-radius: 5px;
   background: #ffff;
-  border-bottom-right-radius: 5px;
-  border-top-right-radius: 5px;
   padding-top: 10px; }
   .business_setup .business-section #departGrid_Cntr .ReactTable {
     max-width: 98vw !important;
