--- a/client/src/Components/BusinessSetup/business_setup.scss
+++ b/client/src/Components/BusinessSetup/business_setup.scss
@@ -2,11 +2,9 @@
   // background: #f2f2f2;
   .business-section {
     background: #fff;
+    border-radius: 5px;
     border: 1px solid #d3d3d3;
-    border-bottom-left-radius: 5px;
     background: #ffff;
-    border-bottom-right-radius: 5px;
-    border-top-right-radius: 5px;
     padding-top: 10px;
 
     #departGrid_Cntr {
