--- a/client/src/Components/LabSetup/LabSetup.css
+++ b/client/src/Components/LabSetup/LabSetup.css
@@ -1,9 +1,7 @@
 .hims_lab_setup .common-section {
   border: 1px solid #d3d3d3;
   margin-top: 0px;
-  border-bottom-left-radius: 5px;
-  border-bottom-right-radius: 5px;
-  border-top-right-radius: 5px;
+  border-radius: 5px;
   background: #fff; }
 
 .hims_lab_setup .ReactTable {
