--- a/client/src/Components/LabSetup/LabSetup.scss
+++ b/client/src/Components/LabSetup/LabSetup.scss
@@ -2,9 +2,7 @@
   .common-section {
     border: 1px solid #d3d3d3;
     margin-top: 0px;
-    border-bottom-left-radius: 5px;
-    border-bottom-right-radius: 5px;
-    border-top-right-radius: 5px;
+    border-radius: 5px;
     background: #fff;
   }
   .ReactTable {
