--- a/client/src/Components/CommonSetup/common_setup.scss
+++ b/client/src/Components/CommonSetup/common_setup.scss
@@ -2,9 +2,7 @@
   // background: #f2f2f2;
   .common-section {
     border: 1px solid #d3d3d3;
-    border-bottom-left-radius: 5px;
-    border-bottom-right-radius: 5px;
-    border-top-right-radius: 5px;
+    border-radius: 5px;
     background: #fff;
   }
   .ReactTable {
