--- a/client/src/Components/InventorySetup/InventorySetup.css
+++ b/client/src/Components/InventorySetup/InventorySetup.css
@@ -1,8 +1,6 @@
 .hims_Inventory_setup .common-section {
   border: 1px solid #d3d3d3;
-  border-bottom-left-radius: 5px;
-  border-bottom-right-radius: 5px;
-  border-top-right-radius: 5px;
+  border-radius: 5px;
   background-color: #ffffff; }
 
 .hims_Inventory_setup .ReactTable {
