--- a/client/src/Components/MedicalWorkbenchSetup/medical_wb_setup.css
+++ b/client/src/Components/MedicalWorkbenchSetup/medical_wb_setup.css
@@ -1,7 +1,5 @@
 .medical_wb_setup .wb-setup-section {
   padding-top: 10px;
   border: 1px solid #d3d3d3;
-  border-bottom-left-radius: 5px;
-  background: #ffff;
-  border-bottom-right-radius: 5px;
-  border-top-right-radius: 5px; }
+  border-radius: 5px;
+  background: #ffff; }
