--- a/client/src/Components/PharmacySetup/PharmacySetup.scss
+++ b/client/src/Components/PharmacySetup/PharmacySetup.scss
@@ -1,13 +1,8 @@
 .hims_pharmacy_setup {
   .common-section {
     border: 1px solid #d3d3d3;
-    border-bottom-left-radius: 5px;
-    border-bottom-right-radius: 5px;
-    border-top-right-radius: 5px;
+    border-radius: 5px;
     background-color: #ffffff;
-  }
-  .toggle-section {
-    margin-bottom: 0px;
   }
   .ReactTable {
     max-height: 80vh !important;
