--- a/client/src/Components/ProcedureSetup/procedure_setup.css
+++ b/client/src/Components/ProcedureSetup/procedure_setup.css
@@ -1,9 +1,4 @@
 .procedure-setup .procedure-section {
   border: 1px solid #d3d3d3;
-  border-bottom-left-radius: 5px;
-  background: #ffff;
-  border-bottom-right-radius: 5px;
-  border-top-right-radius: 5px; }
-
-.procedure-setup .toggle-section {
-  margin-bottom: 0px; }
+  border-radius: 5px;
+  background: #ffff; }
