--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -1365,6 +1365,44 @@ $forntSize: 0.7rem;
       font-size: 0.9rem;
     }
   }
+
+  .arabicInput {
+    text-align: right;
+    direction: rtl;
+  }
+
+  .tabMaster {
+    background: white;
+    height: 35px;
+    padding: 5px 0 0;
+    width: 100%;
+    color: #797979;
+    margin-bottom: 15px;
+    font-size: 1rem;
+    text-transform: uppercase;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+    ul {
+      position: relative;
+      li {
+        label {
+          font-size: 0.8rem;
+          text-transform: uppercase;
+          padding: 5px 15px;
+          color: #858585;
+        }
+        label:hover {
+          cursor: pointer;
+          color: #000;
+        }
+      }
+      li.active {
+        label {
+          border-bottom: 3px solid #34b8bc;
+          color: #000;
+        }
+      }
+    }
+  }
 }
 
 .hptl-phase1-footer {
