reduce AppBar and Breadcrump shadow

--- a/client/src/Components/common/AlgaehmainPage/AlgaehmainPage.scss
+++ b/client/src/Components/common/AlgaehmainPage/AlgaehmainPage.scss
@@ -1,4 +1,8 @@
 @import "../../../styles/algaehCssVariables.scss"; /* width */
+header {
+  box-shadow: none !important;
+  border-bottom: 2px solid rgba(0, 0, 0, 0.1);
+}
 .btn-userProfile {
   background: none;
   font-size: 1rem;
