--- a/client/src/Components/AppointmentSetup/appointment_setup.scss
+++ b/client/src/Components/AppointmentSetup/appointment_setup.scss
@@ -1,13 +1,26 @@
 .appointment_setup {
   .appointment-section {
-    padding-top: 10px;
+    padding-top: 15px;
+    padding-bottom: 15px;
     border-radius: 5px;
     border: 1px solid #d3d3d3;
     background: #ffff;
   }
   #apptStatusDivCntr {
+    margin-top: 5px;
     .ReactTable {
-      max-height: 55vh !important;
+      max-height: 70vh !important;
+    }
+  }
+  #apptClinicsDivCntr {
+    margin-top: 10px;
+    .ReactTable {
+      max-height: 70vh !important;
+    }
+  }
+  #apptRoomsDivCntr {
+    .ReactTable {
+      max-height: 70vh !important;
     }
   }
 }
