UI Clean up - Business Setup + Appointment Setup + Master Tab UI Tweak

--- a/client/src/Components/BusinessSetup/Currency/currency.css
+++ b/client/src/Components/BusinessSetup/Currency/currency.css
@@ -1,2 +1,4 @@
 #currencyGridCntr .ReactTable {
-  max-height: 70vh !important; }
+  max-height: 65vh !important;
+  margin-top: 10px;
+  margin-bottom: 15px; }
