--- a/client/src/Components/BusinessSetup/Shift/shift.css
+++ b/client/src/Components/BusinessSetup/Shift/shift.css
@@ -1,2 +1,4 @@
 #shiftGridCntr .ReactTable {
-  max-height: 70vh !important; }
+  max-height: 70vh !important;
+  margin-top: 10px;
+  margin-bottom: 15px; }
