--- a/client/src/Components/BusinessSetup/Counter/counter.scss
+++ b/client/src/Components/BusinessSetup/Counter/counter.scss
@@ -1,2 +1,10 @@
 .counter {
 }
+
+#counterDivCntr {
+  .ReactTable {
+    max-height: 70vh !important;
+    margin-top: 10px;
+    margin-bottom: 15px;
+  }
+}
