--- a/client/src/Components/BusinessSetup/Currency/currency.scss
+++ b/client/src/Components/BusinessSetup/Currency/currency.scss
@@ -1,7 +1,7 @@
-.currency {
-}
 #currencyGridCntr {
   .ReactTable {
-    max-height: 70vh !important;
+    max-height: 65vh !important;
+    margin-top: 10px;
+    margin-bottom: 15px;
   }
 }
