--- a/client/src/Components/BusinessSetup/DeptMaster/dept.scss
+++ b/client/src/Components/BusinessSetup/DeptMaster/dept.scss
@@ -59,6 +59,15 @@
 }
 #depddGridCntr {
   .ReactTable {
-    max-height: 65vh !important;
+    max-height: 70vh !important;
+    margin-top: 10px;
+    margin-bottom: 15px;
+  }
+}
+#subdepddCntr {
+  .ReactTable {
+    max-height: 50vh !important;
+    margin-top: 10px;
+    margin-bottom: 15px;
   }
 }
