--- a/client/src/Components/BusinessSetup/Shift/shift.scss
+++ b/client/src/Components/BusinessSetup/Shift/shift.scss
@@ -1,7 +1,7 @@
-.shift {
-}
 #shiftGridCntr {
   .ReactTable {
     max-height: 70vh !important;
+    margin-top: 10px;
+    margin-bottom: 15px;
   }
 }
