--- a/client/src/Components/BusinessSetup/UserShiftMapping/user_shift_mapping.scss
+++ b/client/src/Components/BusinessSetup/UserShiftMapping/user_shift_mapping.scss
@@ -1,2 +1,7 @@
-.user_shift_mapping {
+#usmDivCntr {
+  .ReactTable {
+    max-height: 70vh !important;
+    margin-top: 10px;
+    margin-bottom: 15px;
+  }
 }
