--- a/client/src/index.css
+++ b/client/src/index.css
@@ -946,24 +946,28 @@
     direction: rtl; }
   :global .tabMaster {
     background: white;
-    height: 35px;
-    padding: 5px 0 0;
     width: 100%;
     color: #797979;
     margin-bottom: 15px;
-    font-size: 1rem;
-    text-transform: uppercase;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24); }
     :global .tabMaster ul {
       position: relative; }
-      :global .tabMaster ul li label {
-        font-size: 0.8rem;
-        text-transform: uppercase;
-        padding: 5px 15px;
-        color: #858585; }
-      :global .tabMaster ul li label:hover {
-        cursor: pointer;
-        color: #000; }
+      :global .tabMaster ul li {
+        border-right: 1px solid #e9e9e9;
+        margin: 0;
+        padding: 0; }
+        :global .tabMaster ul li label {
+          font-size: 0.8rem;
+          text-transform: uppercase;
+          padding: 7px 15px;
+          color: #858585;
+          margin: 0;
+          border: none;
+          height: 33px; }
+        :global .tabMaster ul li label:hover {
+          cursor: pointer;
+          color: #000;
+          background: linear-gradient(to bottom, #f1f1f1 0%, white 100%); }
       :global .tabMaster ul li.active label {
         border-bottom: 3px solid #34b8bc;
         color: #000; }
