--- a/client/src/styles/site.css
+++ b/client/src/styles/site.css
@@ -32,6 +32,9 @@ body {
   -webkit-transition: all 0.2s ease-in-out;
   transition: all 0.2s ease-in-out; }
 
+:global .btn-rounded {
+  border-radius: 50%; }
+
 :global .btn-primary {
   color: #fff;
   background-color: none;
