--- a/client/src/styles/site.scss
+++ b/client/src/styles/site.scss
@@ -35,6 +35,9 @@ body {
     transition: all 0.2s ease-in-out;
   }
 
+  .btn-rounded {
+    border-radius: 50%;
+  }
   .btn-primary {
     color: #fff;
     background-color: none;
